# FastapiOtusProject

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: lint.yml  test.yml
api_deepface/: Dockerfile  api.py  config.py  get_models.sh  main.py  requirements.txt
api_kandinsky/: Dockerfile  api.py  config.py  main.py  requirements.txt
app/: .env.dev  .env.prod  .env.template  Dockerfile  alembic.ini  create_fastapi_app.py  main.py
app/api/: __init__.py  auth.py  image.py  profiles.py  root.py  users.py
app/api/api/: __init__.py  image.py
app/api/api_v1/: __init__.py  profiles.py  users.py
app/core/: admin.py  config.py  security.py  store.py
app/core/models/: __init__.py  base.py  profile.py  user.py
app/core/schemas/: __init__.py  profile.py  user.py
app/crud/: base_crud.py  profile.py  user.py
app/deepface/: DeepFace.py
app/dependencies/: dependencies.py
app/migrations/: env.py
app/migrations/versions/: e14ec97473a7_initial_tables.py  e4fbe212603b_add_admin.py
app/tests/: api_test.py  conftest.py  crud_test.py  redis_test.py  store_test.py
app/views/: __init__.py
