[project]
name = "otus_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "deepface>=0.0.95",
    "fastapi[all]>=0.115.12",
    "gunicorn>=23.0.0",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.0.0",
    "pydantic-settings>=2.8.1",
    "python-jose>=3.4.0",
    "redis>=7.1.0",
    "sqladmin[full]>=0.20.1",
    "sqlalchemy[asyncio]>=2.0.40",
    "tf-keras>=2.20.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
